# edge-anomaly

./: .dockerignore  Dockerfile  README.md  app.js  autoencoder_model.pth  cli_client.py  config.py  dashboard.py  edge_model.onnx  edge_model.onnx.data  edge_model_quantized.onnx  edge_server.py  export_edge_model.py  index.html  main.py  model_meta.json  pyproject.toml  requirements.txt  simulate_edge_device.py  style.css  test_deployed_api.py  test_pipeline.py  train.py
data/: anomalous_data.csv  simulate_sensor_data.py
models/: autoencoder.py
